makko/media/sonarr/deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  revisionHistoryLimit: 1
  replicas: 0
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: talos-yha-nr5
      containers:
      - image: lscr.io/linuxserver/sonarr:4.0.20
        name: sonarr
        volumeMounts:
        - name: media
          mountPath: /media
        - name: config
          mountPath: /config
        - name: data
          mountPath: /downloads
        ports:
        - containerPort: 8989
        resources:
          limits:
            cpu: "4"
            memory: 2048Mi
            ephemeral-storage: 2Gi
          requests:
            cpu: 100m 
            memory: 256Mi
            ephemeral-storage: 32Mi
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: jellyfin-data
          readOnly: false
      - name: config
        persistentVolumeClaim:
          claimName: sonarr-config
          readOnly: false
      - name: data
        hostPath:
          path: /var/mnt/transmission-cache
          type: DirectoryOrCreate
      securityContext:
        fsGroup: 1000
