makko/media/sonarr/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "sonarr.senk0.com"
  rules:
    - backendRefs:
        - name: sonarr
          port: 8989
